Centralize validation logic into base classes to eliminate duplicate code and improve maintainability